Created first queries

--- a/Analizator_Backend/appsettings.json
+++ b/Analizator_Backend/appsettings.json
@@ -3,10 +3,11 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=LAPTOP-J9H9LOQ2;Database=AnalizatorDB;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-J9H9LOQ2;Database=AnalizatorDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
+
   "AllowedHosts": "*"
 }
